# mac-state-monitor

./: AGENTS.md  Cargo.toml
assets/: AppIcon.icns
docs/: 产品体验问题汇总.md
resources/: Info.plist
scripts/: build_release.sh  create_app_bundle.sh  create_pkg.sh  export_runcat_frames.swift
src/: alert.rs  app.rs  config.rs  launch_agent.rs  main.rs  model.rs
src/monitor/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  temperature.rs
src/ui/: chart_window.rs  menu.rs  mod.rs  tray.rs
